[gd_scene load_steps=65 format=3 uid="uid://ygwuqctemctw"]

[ext_resource type="Script" path="res://objects/doors/door_1.gd" id="1_elc1o"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_block.gd" id="2_fpdik"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/data_vector_byte.gd" id="3_xedc7"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/data_vector_float.gd" id="4_6lfln"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/data_vector_int.gd" id="5_dphof"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/mesh_vector_data.gd" id="6_wflp8"]
[ext_resource type="Material" uid="uid://hfio5k0rda6w" path="res://texture/mesh_texture/Tiles032_2K/Tiles032_2K.tres" id="7_q7i73"]
[ext_resource type="Material" uid="uid://c3t05thscwwv4" path="res://texture/mesh_texture/Others/Blackcrey.tres" id="8_iikog"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mv1b7"]
size = Vector3(10, 10, 10)

[sub_resource type="Resource" id="Resource_ljg1l"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_1fsv7"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_px6gv"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 0, 0)
name = &"material_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_mg3eg"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_it8du"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0)
name = &"uv_transform"
category = ""
data_type = 8
stride = 6

[sub_resource type="Resource" id="Resource_ndswg"]
script = ExtResource("3_xedc7")
data = PackedByteArray(1, 1, 1, 1, 1, 1)
name = &"visible"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_dsdbg"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_c5c4r"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5)
name = &"face_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_6x5gs"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(-1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1)
name = &"normal"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_wuctp"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
name = &"vertex_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_oqcog"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(0, 5, 0, 0, 5, 1, 0, 0, 1, 0, 0, 0, 2, 5, 0, 2, 5, 1, 2, 0, 1, 2, 0, 0)
name = &"position"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_ewyto"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_4ajc4"]
script = ExtResource("6_wflp8")
num_vertices = 8
num_edges = 12
num_faces = 6
num_face_vertices = 24
active_vertex = -1
active_edge = -1
active_face = -1
active_face_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
vertex_data = {
"position": SubResource("Resource_oqcog"),
"selected": SubResource("Resource_ewyto")
}
edge_data = {
"selected": SubResource("Resource_ljg1l")
}
face_data = {
"color": SubResource("Resource_1fsv7"),
"material_index": SubResource("Resource_px6gv"),
"selected": SubResource("Resource_mg3eg"),
"uv_transform": SubResource("Resource_it8du"),
"visible": SubResource("Resource_ndswg")
}
face_vertex_data = {
"color": SubResource("Resource_dsdbg"),
"face_index": SubResource("Resource_c5c4r"),
"normal": SubResource("Resource_6x5gs"),
"vertex_index": SubResource("Resource_wuctp")
}

[sub_resource type="Resource" id="Resource_bgroc"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_bi87v"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_3ygm6"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 0, 0)
name = &"material_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_2t24q"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_b6gry"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0)
name = &"uv_transform"
category = ""
data_type = 8
stride = 6

[sub_resource type="Resource" id="Resource_k2axw"]
script = ExtResource("3_xedc7")
data = PackedByteArray(1, 1, 1, 1, 1, 1)
name = &"visible"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_2opxd"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_53rw8"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5)
name = &"face_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_tmj3x"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(-1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1)
name = &"normal"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_4tref"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
name = &"vertex_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_qs6hi"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(0, 5, 0, 0, 5, 1, 0, 0, 1, 0, 0, 0, 2, 5, 0, 2, 5, 1, 2, 0, 1, 2, 0, 0)
name = &"position"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_dponv"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_bswtu"]
script = ExtResource("6_wflp8")
num_vertices = 8
num_edges = 12
num_faces = 6
num_face_vertices = 24
active_vertex = -1
active_edge = -1
active_face = -1
active_face_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
vertex_data = {
"position": SubResource("Resource_qs6hi"),
"selected": SubResource("Resource_dponv")
}
edge_data = {
"selected": SubResource("Resource_bgroc")
}
face_data = {
"color": SubResource("Resource_bi87v"),
"material_index": SubResource("Resource_3ygm6"),
"selected": SubResource("Resource_2t24q"),
"uv_transform": SubResource("Resource_b6gry"),
"visible": SubResource("Resource_k2axw")
}
face_vertex_data = {
"color": SubResource("Resource_2opxd"),
"face_index": SubResource("Resource_53rw8"),
"normal": SubResource("Resource_tmj3x"),
"vertex_index": SubResource("Resource_4tref")
}

[sub_resource type="Resource" id="Resource_kvi5f"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_l6qtm"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_pk0c5"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 0, 0)
name = &"material_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_oq6y4"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_bdcxi"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0)
name = &"uv_transform"
category = ""
data_type = 8
stride = 6

[sub_resource type="Resource" id="Resource_hmxf2"]
script = ExtResource("3_xedc7")
data = PackedByteArray(1, 1, 1, 1, 1, 1)
name = &"visible"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_wooy7"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_mkow0"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5)
name = &"face_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_5b3b8"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(-1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1)
name = &"normal"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_lpq2l"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
name = &"vertex_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_3lfo4"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 4, 1, 0, 4, 1, 1, 4, 0, 1, 4, 0, 0)
name = &"position"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_5ld46"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_ptxv1"]
script = ExtResource("6_wflp8")
num_vertices = 8
num_edges = 12
num_faces = 6
num_face_vertices = 24
active_vertex = -1
active_edge = -1
active_face = -1
active_face_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
vertex_data = {
"position": SubResource("Resource_3lfo4"),
"selected": SubResource("Resource_5ld46")
}
edge_data = {
"selected": SubResource("Resource_kvi5f")
}
face_data = {
"color": SubResource("Resource_l6qtm"),
"material_index": SubResource("Resource_pk0c5"),
"selected": SubResource("Resource_oq6y4"),
"uv_transform": SubResource("Resource_bdcxi"),
"visible": SubResource("Resource_hmxf2")
}
face_vertex_data = {
"color": SubResource("Resource_wooy7"),
"face_index": SubResource("Resource_mkow0"),
"normal": SubResource("Resource_5b3b8"),
"vertex_index": SubResource("Resource_lpq2l")
}

[sub_resource type="Resource" id="Resource_pd3ig"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_162uc"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_33v7r"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 0, 0)
name = &"material_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_x1kbx"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_k4r2y"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0)
name = &"uv_transform"
category = ""
data_type = 8
stride = 6

[sub_resource type="Resource" id="Resource_j6r24"]
script = ExtResource("3_xedc7")
data = PackedByteArray(1, 1, 1, 1, 1, 1)
name = &"visible"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_dkj0t"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
name = &"color"
category = ""
data_type = 4
stride = 4

[sub_resource type="Resource" id="Resource_my16k"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5)
name = &"face_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_6fn4c"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(-1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1)
name = &"normal"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_qbopf"]
script = ExtResource("5_dphof")
data = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
name = &"vertex_index"
category = ""
data_type = 1
stride = 1

[sub_resource type="Resource" id="Resource_p2d32"]
script = ExtResource("4_6lfln")
data = PackedFloat32Array(0, 4, 0, 0, 4, 1, 0, 0, 1, 0, 0, 0, 4, 4, 0, 4, 4, 1, 4, 0, 1, 4, 0, 0)
name = &"position"
category = ""
data_type = 6
stride = 3

[sub_resource type="Resource" id="Resource_10mm6"]
script = ExtResource("3_xedc7")
data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
name = &"selected"
category = ""
data_type = 0
stride = 1

[sub_resource type="Resource" id="Resource_gkfql"]
script = ExtResource("6_wflp8")
num_vertices = 8
num_edges = 12
num_faces = 6
num_face_vertices = 24
active_vertex = -1
active_edge = -1
active_face = -1
active_face_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
vertex_data = {
"position": SubResource("Resource_p2d32"),
"selected": SubResource("Resource_10mm6")
}
edge_data = {
"selected": SubResource("Resource_pd3ig")
}
face_data = {
"color": SubResource("Resource_162uc"),
"material_index": SubResource("Resource_33v7r"),
"selected": SubResource("Resource_x1kbx"),
"uv_transform": SubResource("Resource_k4r2y"),
"visible": SubResource("Resource_j6r24")
}
face_vertex_data = {
"color": SubResource("Resource_dkj0t"),
"face_index": SubResource("Resource_my16k"),
"normal": SubResource("Resource_6fn4c"),
"vertex_index": SubResource("Resource_qbopf")
}

[sub_resource type="Animation" id="Animation_4nqml"]
resource_name = "door_1_closed"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Block_3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.116, 0.368), Vector3(1.04798, 1.11646, 0.368088)]
}

[sub_resource type="Animation" id="Animation_dvglg"]
resource_name = "door_1_open"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Block_3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.04798, 1.11646, 0.368088), Vector3(0, 1.116, 0.368)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8guj"]
_data = {
"door_1_closed": SubResource("Animation_4nqml"),
"door_1_open": SubResource("Animation_dvglg")
}

[node name="Door_1" type="Area3D"]
script = ExtResource("1_elc1o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mv1b7")

[node name="LabelPress" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7581, -0.498749)
billboard = 1
no_depth_test = true
text = "PRESS \"F\" TO INTERACTION"

[node name="Node3D" type="Node3D" parent="."]

[node name="Block_0" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -1)
script = ExtResource("2_fpdik")
mesh_vector_data = SubResource("Resource_4ajc4")
materials = Array[Material]([ExtResource("7_q7i73")])

[node name="Block_1" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1)
script = ExtResource("2_fpdik")
mesh_vector_data = SubResource("Resource_bswtu")
materials = Array[Material]([ExtResource("7_q7i73")])

[node name="Block_2" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3.96878, -1.02494)
script = ExtResource("2_fpdik")
mesh_vector_data = SubResource("Resource_ptxv1")
materials = Array[Material]([ExtResource("7_q7i73")])

[node name="Block_3" type="Node3D" parent="Node3D"]
transform = Transform3D(1.04798, 0, 0, 0, 1.11646, 0, 0, 0, 0.368088, -2.16184, 0, -0.51196)
script = ExtResource("2_fpdik")
mesh_vector_data = SubResource("Resource_gkfql")
materials = Array[Material]([ExtResource("8_iikog")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node3D"]
libraries = {
"": SubResource("AnimationLibrary_b8guj")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="." to="CollisionShape3D" method="_on_interaction_1_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_exited" from="." to="CollisionShape3D" method="_on_interaction_1_body_exited"]
